--- a/src/style.scss
+++ b/src/style.scss
@@ -654,13 +654,108 @@ footer {
 // single
 .single {
 	display: flex;
-	gap: 50px;
-	.contents{
+
+	.contents {
+		margin: 0 3.5rem 0 3.5rem;
 		flex: 5;
+		position: relative;
+
+		h1 {
+			font-size: 50px;
+			line-height: 50px;
+			padding: 3.5rem 0 1.5rem 0;
+			text-transform: capitalize;
+		}
+
+		img {
+			width: 100%;
+			height: 500px;
+			object-fit: cover;
+		}
+
+		.blogmain {
+			position: relative;
+			background-color: #fff;
+			border-top-left-radius: 0.88889rem;
+			border-top-right-radius: 0.88889rem;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: -3.5rem;
+			max-width: 50.40741rem;
+			padding: 2rem 1.33333rem 2rem 1.33333rem;
+
+			.user {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				font-size: 14px;
+				margin-bottom: 1.5rem;
+				.info {
+					display: flex;
+					gap: 10px;
+
+					img {
+						width: 50px;
+						height: 50px;
+						border-radius: 50%;
+						object-fit: cover;
+					}
+
+					.owner {
+						span {
+							font-size: 21px;
+							font-weight: 600;
+						}
+						p{
+							font-size: 18px;
+							color: $background;
+						}
+					}
+				}
+
+				.edit {
+					display: flex;
+					gap: 10px;
+
+					.editimg {
+						background-color: $background;
+						padding: 5px;
+						height: 40px;
+						width: auto;
+						border-radius: 50%;
+					}
+
+					.deleteimg {
+						background-color: $background;
+						padding: 5px;
+						height: 40px;
+						width: auto;
+						border-radius: 50%;
+
+					}
+				}
+			}
+			.blog{
+				h2{
+					font-weight: 500;
+					font-size: 35px;
+					line-height: 40px;
+					padding-bottom: 10px;
+				}
+				p{
+					font-weight: 300;
+					font-size: 21px;
+					margin-bottom: 30px;
+					text-align: justify;
+				}
+			}
+		}
 	}
-	.menus{
+
+	.menus {
 		flex: 2;
 	}
+
 }
 
 // single end
