single page completed

--- a/src/style.scss
+++ b/src/style.scss
@@ -381,7 +381,7 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	margin-top: 1.0rem;
-	padding: 1.0rem;
+	padding: 3.5rem;
 	color: #000;
 	background-color: rgb(219, 219, 219);
 	font-size: 18px;
@@ -393,6 +393,7 @@ footer {
 	}
 }
 
+// HOME
 .home {
 	padding: 10.5rem 9.5rem;
 
@@ -478,7 +479,7 @@ footer {
 	}
 }
 
-// Homepage
+
 
 // Homepage
 .main {
@@ -510,7 +511,7 @@ footer {
 .herotitle {
 	font-size: 50px;
 	font-weight: 500;
-	padding: 20px 0 0 0;
+	padding: 50px 0 0 0;
 	line-height: 45px;
 
 }
@@ -665,6 +666,7 @@ footer {
 			line-height: 50px;
 			padding: 3.5rem 0 1.5rem 0;
 			text-transform: capitalize;
+			font-weight: 600;
 		}
 
 		img {
@@ -681,7 +683,7 @@ footer {
 			margin-left: auto;
 			margin-right: auto;
 			margin-top: -3.5rem;
-			max-width: 50.40741rem;
+			max-width: 47.40741rem;
 			padding: 2rem 1.33333rem 2rem 1.33333rem;
 
 			.user {
@@ -690,6 +692,7 @@ footer {
 				justify-content: space-between;
 				font-size: 14px;
 				margin-bottom: 1.5rem;
+
 				.info {
 					display: flex;
 					gap: 10px;
@@ -706,7 +709,8 @@ footer {
 							font-size: 21px;
 							font-weight: 600;
 						}
-						p{
+
+						p {
 							font-size: 18px;
 							color: $background;
 						}
@@ -735,14 +739,16 @@ footer {
 					}
 				}
 			}
-			.blog{
-				h2{
+
+			.blog {
+				h2 {
 					font-weight: 500;
 					font-size: 35px;
 					line-height: 40px;
 					padding-bottom: 10px;
 				}
-				p{
+
+				p {
 					font-weight: 300;
 					font-size: 21px;
 					margin-bottom: 30px;
@@ -752,10 +758,83 @@ footer {
 		}
 	}
 
+	// menu
+
 	.menus {
+		display: flex;
+		flex-direction: column;
+		gap: 25px;
+		padding: 4.5rem 3.5rem 3rem 0;
 		flex: 2;
+
+		h1 {
+			font-size: 30px;
+			font-weight: 500;
+		}
+
+		.side {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			padding-top: 2rem;
+
+			.sideimg {
+				img {}
+			}
+
+			.sidecontent {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+
+				h2 {
+					font-size: 22px;
+					line-height: 25px;
+					font-weight: 400;
+				}
+
+				.buttonflex {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					button {
+						width: max-content;
+						padding: 5px 20px;
+						border: none;
+						cursor: pointer;
+						background-color: #FFF;
+						border: 1px solid $background;
+						font-size: 18px;
+						font-weight: 300;
+						color: $blogbutton;
+
+						&:hover {
+							border: 1px solid white;
+							background-color: $blogbutton;
+							color: #FFF;
+						}
+
+					}
+					.info {
+						display: flex;
+						align-items: center;
+
+						img {
+							width: 40px;
+							height: 40px;
+							border-radius: 50%;
+							object-fit: cover;
+						}
+					}
+				}
+			}
+		}
 	}
 
 }
 
 // single end
+
+// menu
+
+// menu end
