--- a/src/style.scss
+++ b/src/style.scss
@@ -5,413 +5,125 @@ $blogbutton: #676cfd;
 $lightgray: #F1F1F1;
 
 
-.container {
 
-	.container {
-		padding: 0 0 0 4.0rem;
-		display: flex;
-		gap: 4.0rem;
-
-		.wrap {
-			display: flex;
-			align-items: flex-start;
-			justify-content: center;
-			height: 90vh;
-			flex-direction: column;
-			flex: 0.9;
-			flex-wrap: wrap;
-
-			.start {
-				font-size: 16px;
-				color: $lightFont;
-				font-weight: 400;
-			}
-
-			.login {
-				font-size: 35px;
-				font-weight: 400;
-				margin-top: 0.8rem;
-			}
-
-			.notamember {
-				margin-top: 1.8rem;
-				font-size: 18px;
-			}
-
-			.form {
-				display: flex;
-				flex-direction: column;
-				gap: 2.5rem;
-				width: 100%;
-				margin: 2.5rem 9.0rem 0 0;
-
-				input {
-					height: 30px;
-					color: #000;
-					border: none;
-					border-bottom: 1px solid #E8E8E8;
-					font-size: 18px;
-					font-weight: 400;
-					outline: none;
-				}
-
-				::placeholder {
-					font-size: 18px;
-					font-weight: 300;
-					color: $lightFont;
-					padding-top: 1.0rem;
-				}
-
-
-			}
-
-			button {
-				height: 50px;
-				font-size: 18px;
-				border-radius: 88px;
-				border: none;
-				color: #fff;
-				background-color: $button;
-			}
-
-			.checkbox {
-				margin-top: 2.5rem;
-				display: flex;
-				width: 100%;
-				justify-content: space-between;
-				font-size: 18px;
-
-				.lebel {
-					display: flex;
-					gap: 5px;
-				}
-
-				input[type="checkbox"] {
-					width: 18px;
-					height: 18px;
-				}
-
-			}
-
-			.or {
-				margin-top: 1.4rem;
-				font-size: 18px;
-				color: $lightFont;
-				width: 100%;
-				display: flex;
-				justify-content: center;
-			}
-
-			.auth {
-				margin-top: 1.4rem;
-				display: flex;
-				justify-content: space-between;
-				width: 100%;
-
-				img {
-					height: 50px;
-				}
-			}
-
-		}
-
-
-
-		.image2 {
-			background-image: url(../public/image/loginside.png);
-			flex: 1.1;
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 45% 100%;
-		}
-	}
-
-}
-
-
-
-/* header */
-.toggle,
-[id^=drop] {
-	display: none;
-}
-
-nav {
-	position: relative;
-	margin: 0;
-	padding: 0 30px 0 0;
-	background-color: #fff;
-	// border-bottom: 1px solid #b1b7c5;
-	box-shadow: rgb(3 27 78 / 10%) 0 2px 4px;
-	z-index: 10;
-
-	button {
-		width: max-content;
-		padding: 5px 20px;
-		border: none;
-		cursor: pointer;
-		background-color: #FFF;
-		border: 2px solid $background;
-		font-size: 17px;
-		font-weight: 400;
-		color: $blogbutton;
-
-		&:hover {
-			border: 2px solid white;
-			background-color: $blogbutton;
-			color: #FFF;
-		}
-	}
-}
-
-#logo {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	padding: 15px 30px;
-	float: left;
-	height: 100%;
-
-}
-
-/* Since we'll have the "ul li" "float:left"
- * we need to add a clear after the container. */
-
-nav:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-/* Removing padding, margin and "list-style" from the "ul",
- * and adding "position:reltive" */
-nav ul {
-	float: right;
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-
-/* Positioning the navigation items inline */
-nav ul li {
-	margin: 0px;
-	display: inline-block;
-	float: left;
-	background-color: #fff;
-}
-
-/* Styling the links */
-nav a {
-	display: block;
-	padding: 14px 20px;
-	color: var(--header);
-	font-size: 17px;
-	text-decoration: none;
-}
-
-
-nav ul li ul li:hover {
-	background: #fff;
-}
-
-/* Background color change on Hover */
-nav a:hover {
-	background-color: transparent;
-}
-
-/* Hide Dropdowns by Default
- * and giving it a position of absolute */
-nav ul ul {
-	display: none;
-	position: absolute;
-	/* has to be the same number as the "line-height" of "nav a" */
-	top: 60px;
-}
-
-/* Display Dropdowns on Hover */
-nav ul li:hover>ul {
-	display: inherit;
-	z-index: 1;
-}
-
-/* Fisrt Tier Dropdown */
-nav ul ul li {
-	width: 170px;
-	top: -10px;
-	float: none;
-	display: list-item;
-	position: relative;
-	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-}
-
-/* Second, Third and more Tiers	
- * We move the 2nd and 3rd etc tier dropdowns to the left
- * by the amount of the width of the first tier.
-*/
-nav ul ul ul li {
-	position: relative;
-	top: -60px;
-	/* has to be the same number as the "width" of "nav ul ul li" */
-	left: 170px;
-}
-
-
-/* Change ' +' in order to change the Dropdown symbol */
-// li > a:after { content:  ' +'; }
-// li > a:only-child:after { content: ''; }
-
-/* index */
-.avatar {
-	height: 50px;
-	border-radius: 50%;
-}
-
-
-/* /index */
-/* Media Queries
---------------------------------------------- */
 
 @media all and (max-width : 768px) {
+	// home blog card class
+	.home {
+		padding: 10rem 10px 5rem 10px !important;
 
-	html,
-	body {
-		padding: 0;
-		margin: 0;
-		line-height: 1.6;
-		font-size: 19px;
+		.posts {
+			display: flex;
+			flex-direction: column;
+			gap: 150px;
+
+			.post {
+				display: flex;
+				gap: 10px;
+				flex-direction: column;
+
+				&:nth-child(2n+1) {
+					flex-direction: column !important;
+				}
+
+				.img {
+					flex: 1.5;
+					position: relative;
+
+					&::after {
+						content: "";
+						width: 100%;
+						height: 100%;
+						background-color: $background;
+						position: absolute;
+						top: 20px;
+						left: -20px;
+						z-index: -1;
+					}
+
+					img {
+						max-height: 400px;
+						width: 100%;
+						height: 300px;
+						object-fit: cover;
+
+
+					}
+				}
+
+				.content {
+					flex: 2;
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+
+					h1 {
+						font-size: 35px;
+						font-weight: 500;
+					}
+
+					p {
+						font-size: 21px;
+						font-weight: 300;
+					}
+
+					button {
+						width: max-content;
+						padding: 10px 20px;
+						border: none;
+						cursor: pointer;
+						background-color: #FFF;
+						border: 1px solid $background;
+						font-size: 18px;
+						font-weight: 300;
+						color: $blogbutton;
+
+						&:hover {
+							border: 1px solid white;
+							background-color: $blogbutton;
+							color: #FFF;
+						}
+					}
+
+					.link {
+						text-decoration: none;
+						color: #000;
+					}
+				}
+			}
+
+		}
 	}
 
-	#logo {
-		display: block;
-		padding: 0;
-		width: 100%;
-		text-align: center;
-		float: none;
+	.herotitle {
+		font-size: 30px;
+		font-weight: 500;
+		padding: 20px 0 0 0;
+		line-height: 35px;
 	}
 
-	nav {
-		margin: 0;
+	.pagecontent {
+		margin: 0px 10px 40px 10px;
+		font-size: 20px;
+		font-weight: 300 !important;
 	}
 
-	/* Hide the navigation menu by default */
-	/* Also hide the  */
-	.toggle+a,
-	.menu {
-		display: none;
+	.herotile {
+		display: inline-flex;
+		flex-wrap: wrap;
+		gap: 15px;
 	}
 
-	/* Stylinf the toggle lable */
-	.toggle {
-		display: block;
-		background-color: #fff;
-		padding: 14px 20px;
-		color: #000;
-		font-size: 17px;
-		text-decoration: none;
-		border: none;
+	.herocontainer {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: -4rem;
+		margin-left: 15px;
+		margin-right: 15px;
+		max-width: 50rem;
 	}
-
-	.toggle:hover {
-		background-color: #fff;
-	}
-
-	/* Display Dropdown when clicked on Parent Lable */
-	[id^=drop]:checked+ul {
-		display: block;
-	}
-
-	/* Change menu item's width to 100% */
-	nav ul li {
-		display: block;
-		width: 100%;
-	}
-
-	nav ul ul .toggle,
-	nav ul ul a {
-		padding: 0 40px;
-	}
-
-	nav ul ul ul a {
-		padding: 0 80px;
-	}
-
-	nav a:hover,
-	nav ul ul ul a {
-		background-color: #fff;
-	}
-
-	nav ul li ul li .toggle,
-	nav ul ul a,
-	nav ul ul ul a {
-		padding: 14px 20px;
-		color: #FFF;
-		font-size: 17px;
-	}
-
-
-	nav ul li ul li .toggle,
-	nav ul ul a {
-		background-color: #212121;
-	}
-
-	/* Hide Dropdowns by Default */
-	nav ul ul {
-		float: none;
-		position: static;
-		color: #ffffff;
-		/* has to be the same number as the "line-height" of "nav a" */
-	}
-
-	/* Hide menus on hover */
-	nav ul ul li:hover>ul,
-	nav ul li:hover>ul {
-		display: none;
-	}
-
-	/* Fisrt Tier Dropdown */
-	nav ul ul li {
-		display: block;
-		width: 100%;
-	}
-
-	nav ul ul ul li {
-		position: static;
-		/* has to be the same number as the "width" of "nav ul ul li" */
-
-	}
-
 }
-
-@media all and (max-width : 330px) {
-
-	nav ul li {
-		display: block;
-		width: 94%;
-	}
-
-}
-
-
 // footer
-footer {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-top: 1.0rem;
-	padding: 3.5rem;
-	color: #000;
-	background-color: rgb(219, 219, 219);
-	font-size: 18px;
-	height: 50px;
-
-	img {
-		height: 50px;
-
-	}
-}
 
 // HOME
 .home {
@@ -641,348 +353,11 @@ footer {
 	margin-top: 1rem !important;
 }
 
-@media screen and (max-width: 640px) {
-
-	.herotitle {
-		font-size: 30px;
-		font-weight: 500;
-		padding: 20px 0 0 0;
-		line-height: 35px;
-	}
-
-	.pagecontent {
-		margin: 0px 10px 40px 10px;
-		font-size: 20px;
-		font-weight: 300 !important;
-	}
-
-	.herotile {
-		display: inline-flex;
-		flex-wrap: wrap;
-		gap: 15px;
-	}
-
-	.herocontainer {
-		display: flex;
-		flex-direction: column;
-		margin-bottom: -4rem;
-		margin-left: 15px;
-		margin-right: 15px;
-		max-width: 50rem;
-	}
-}
-
-// single
-.single {
-	display: flex;
-
-	.contents {
-		margin: 0 3.5rem 0 3.5rem;
-		flex: 5;
-		position: relative;
-
-		h1 {
-			font-size: 50px;
-			line-height: 50px;
-			padding: 3.5rem 0 1.5rem 0;
-			text-transform: capitalize;
-			font-weight: 600;
-		}
-
-		img {
-			width: 100%;
-			height: 500px;
-			object-fit: cover;
-		}
-
-		.blogmain {
-			position: relative;
-			background-color: #fff;
-			border-top-left-radius: 0.88889rem;
-			border-top-right-radius: 0.88889rem;
-			margin-left: auto;
-			margin-right: auto;
-			margin-top: -3.5rem;
-			max-width: 47.40741rem;
-			padding: 2rem 1.33333rem 2rem 1.33333rem;
-
-			.user {
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				font-size: 14px;
-				margin-bottom: 1.5rem;
-
-				.info {
-					display: flex;
-					gap: 10px;
-
-					img {
-						width: 50px;
-						height: 50px;
-						border-radius: 50%;
-						object-fit: cover;
-					}
-
-					.owner {
-						span {
-							font-size: 21px;
-							font-weight: 600;
-						}
-
-						p {
-							font-size: 18px;
-							color: $background;
-						}
-					}
-				}
-
-				.edit {
-					display: flex;
-					gap: 10px;
-
-					.editimg {
-						background-color: $background;
-						padding: 5px;
-						height: 40px;
-						width: auto;
-						border-radius: 50%;
-					}
-
-					.deleteimg {
-						background-color: $background;
-						padding: 5px;
-						height: 40px;
-						width: auto;
-						border-radius: 50%;
-
-					}
-				}
-			}
-
-			.blog {
-				h2 {
-					font-weight: 500;
-					font-size: 35px;
-					line-height: 40px;
-					padding-bottom: 10px;
-				}
-
-				p {
-					font-weight: 300;
-					font-size: 21px;
-					margin-bottom: 30px;
-					text-align: justify;
-				}
-			}
-		}
-	}
-
-	// menu
-
-	.menus {
-		display: flex;
-		flex-direction: column;
-		gap: 25px;
-		padding: 4.5rem 3.5rem 3rem 0;
-		flex: 2;
-
-		h1 {
-			font-size: 30px;
-			font-weight: 500;
-		}
-
-		.side {
-			display: flex;
-			flex-direction: column;
-			gap: 20px;
-			padding-top: 2rem;
-
-			.sideimg {
-				img {}
-			}
-
-			.sidecontent {
-				display: flex;
-				flex-direction: column;
-				gap: 20px;
-
-				h2 {
-					font-size: 22px;
-					line-height: 25px;
-					font-weight: 400;
-				}
-
-				.buttonflex {
-					display: flex;
-					justify-content: space-between;
-					align-items: center;
-
-					button {
-						width: max-content;
-						padding: 5px 20px;
-						border: none;
-						cursor: pointer;
-						background-color: #FFF;
-						border: 1px solid $background;
-						font-size: 18px;
-						font-weight: 300;
-						color: $blogbutton;
-
-						&:hover {
-							border: 1px solid white;
-							background-color: $blogbutton;
-							color: #FFF;
-						}
-
-					}
-
-					.info {
-						display: flex;
-						align-items: center;
-
-						img {
-							width: 40px;
-							height: 40px;
-							border-radius: 50%;
-							object-fit: cover;
-						}
-					}
-				}
-			}
-		}
-	}
-
-}
-
-// single end
-
-// write
-
-.add {
-	display: flex;
-	gap: 3.5rem;
-	margin: 3.5rem;
-
-	.content {
-		flex: 2.5;
-
-		h1 {
-			font-size: 30px;
-			margin-bottom: 1.0rem;
-			font-weight: 500;
-		}
-
-		input {
-			border: 1px solid #F1F1F1;
-			width: 100%;
-			margin-bottom: 2.8rem;
-			padding: 10px;
-			font-size: 21px;
-			outline: none;
-
-		}
-	}
 
 
 
-	.aside {
-		display: flex;
-		float: 2;
-		flex-direction: column;
-		gap: 2.0rem;
-		flex: 1.2;
-		max-height: min-content;
-
-		.item {
-			display: flex;
-			flex-direction: column;
-			// justify-content: space-between;
-			// flex: 1;
-			border: 1px solid $lightgray;
-			padding: 1.0rem;
-			gap: 10px;
-			font-size: 18px;
-			font-weight: 300;
-
-			h1 {
-				font-weight: 500;
-				font-size: 30px;
-			}
-
-			.draft {
 
 
-				.status {
-					font-weight: 500;
-				}
-			}
-
-			.imginput {
-				display: none;
-			}
-
-			.file {
-				text-decoration: underline;
-				cursor: pointer;
-			}
-
-			.radio {
-				display: flex;
-				flex-direction: column;
-			}
-
-			.buttons {
-				display: flex;
-				justify-content: space-between;
-				gap: 15px;
-
-				:first-child {
-					display: flex;
-					justify-content: center;
-					flex: 1;
-					align-items: center;
-					padding: 5px 20px;
-					border: none;
-					cursor: pointer;
-					background-color: #FFF;
-					border: 2px solid $background;
-					font-size: 17px;
-					font-weight: 400;
-					color: $blogbutton;
-
-					&:hover {
-						border: 2px solid white;
-						background-color: $blogbutton;
-						color: #FFF;
-					}
-				}
-
-				:nth-child(2) {
-					display: flex;
-					justify-content: center;
-					flex: 1;
-					align-items: center;
-					padding: 5px 20px;
-					cursor: pointer;
-					border: 2px solid white;
-					font-size: 17px;
-					font-weight: 400;
-					background-color: $blogbutton;
-					color: #FFF;
-
-				}
-			}
-
-
-		}
-	}
-
-
-
-}
-
-// write end
 .rte {
 	min-height: 50vh;
 	font-size: 18px;
@@ -1005,3 +380,4 @@ footer {
 	}
 
 }
+
